--- a/tests/test_ua.yaml
+++ b/tests/test_ua.yaml
@@ -6507,3 +6507,14 @@ test_cases:
     minor: '1'
     patch:
 
+  - user_agent_string: 'Mozilla/5.0 (Linux; Android 4.4.2; SM-G800F Build/KOT49H) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/30.0.0.0 Mobile Safari/537.36 SznProhlizec/3.2.3a'
+    family: 'Seznam Browser Mobile'
+    major: '3'
+    minor: '2'
+    patch: '3a'
+
+  - user_agent_string: 'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/30.0.0.0 SznProhlizec/3.2.3a'
+    family: 'Seznam Browser'
+    major: '3'
+    minor: '2'
+    patch: '3a'
